# promptaudit

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/actions/promptaudit-action/: action.yml
.github/workflows/: ci.yml
baselines/: bench_v1.json  model_v1.json
batteries/: harm_taxonomy.yaml  jailbreaks.yaml  jailbreaks_v2.yaml
docs/: battery-versioning.md  ci-integration.md  gates.md  jailbreak-battery.md  regression.md  trend-tracking.md
evalsets/: quality_v1.jsonl
examples/: model_under_test.yaml
examples/golden/: report.json  report.md
src/promptaudit/: __init__.py  audit.py  baseline.py  bench.py  cli.py  logging.py  models.py  regression.py  report.py  trend.py  versioning.py
src/promptaudit/battery/: __init__.py  loader.py
src/promptaudit/gates/: __init__.py  jailbreak.py  quality.py  safety.py
src/promptaudit/provider/: __init__.py  anthropic.py  base.py  fake.py  openai.py
src/promptaudit/rubric/: __init__.py  loader.py
tests/integration/: test_cli.py  test_trend.py  test_versioning.py
tests/unit/: test_baseline_report.py  test_battery_coverage.py  test_bench.py  test_jailbreak_gate.py  test_properties.py  test_provider.py  test_quality_gate.py  test_regression.py  test_safety_gate.py
